--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,6 +31,8 @@ function t(key) {
         <img
           src={`${import.meta.env.BASE_URL}bar-joni-logo.jpg`}
           alt="Bar Joni Logo"
+          width="48"
+          height="48"
           class="rounded-full w-12 h-12 object-cover"
         />
         <span class="font-bold text-xl">{t('navigation.brand')}</span>
