--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -67,8 +67,8 @@ const galleryImages = [
 		<link rel="preconnect" href="//script.google.com" crossorigin />
 
 		<!-- Resource hints for better loading -->
-		<link rel="modulepreload" href="/src/components/Gallery.astro" />
-		<link rel="modulepreload" href="/src/components/Hero.astro" />
+		<link rel="preload" href={`${import.meta.env.BASE_URL}assets/page.Cg2IRjKt.js`} as="script" />
+		<link rel="preload" href={`${import.meta.env.BASE_URL}assets/index.ClXsWmnx.css`} as="style" />
 
 		<!-- Favicons -->
 		<link rel="icon" type="image/x-icon" href={`${import.meta.env.BASE_URL}favicon.ico`} />
