--- a/src/components/MenuSlideshow.astro
+++ b/src/components/MenuSlideshow.astro
@@ -38,16 +38,22 @@ const categories = Object.entries(menuData);
         >
           <article class="menu-category">
             <h3>{category.title}</h3>
-            <ul class="menu-items">
-              {category.items.map((item) => (
-                <li class="menu-item">
-                  <div class="item-info">
-                    <h4 class="item-name">{item.name}</h4>
-                  </div>
-                  <span class="item-price">{item.price}</span>
-                </li>
-              ))}
-            </ul>
+            <div class="overflow-x-auto">
+              <table class="menu-table w-full border-collapse">
+                <tbody>
+                  {category.items.map((item) => (
+                    <tr class="border-gray-100 border-b last:border-b-0 menu-item">
+                      <td class="py-3 pr-4 align-top">
+                        <h4 class="font-medium text-gray-900 item-name">{item.name}</h4>
+                      </td>
+                      <td class="py-3 pl-4 text-right align-top">
+                        <span class="font-semibold text-blue-600 whitespace-nowrap item-price">{item.price}</span>
+                      </td>
+                    </tr>
+                  ))}
+                </tbody>
+              </table>
+            </div>
           </article>
         </div>
       ))}
