--- a/src/pages/beach-rules.astro
+++ b/src/pages/beach-rules.astro
@@ -89,7 +89,7 @@ const pricing = pricingData
                         <h4 class="font-medium text-gray-900">{t('beachRules.pricing.fullDay')}</h4>
                       </td>
                       <td class="py-4 pl-4 text-right align-top">
-                        <span class="font-semibold text-orange-600 whitespace-nowrap">{pricing.fullDay[lang]}</span>
+                        <span class="font-semibold text-black whitespace-nowrap">{pricing.fullDay[lang]}</span>
                       </td>
                     </tr>
                   </tbody>
@@ -108,23 +108,23 @@ const pricing = pricingData
             <div class="bg-white shadow-lg p-8 rounded-xl">
               <div class="space-y-4">
                 <div class="flex items-start space-x-4">
-                  <span class="flex flex-shrink-0 justify-center items-center bg-orange-100 rounded-full w-8 h-8 font-semibold text-orange-600 text-sm">1</span>
+                  <span class="flex flex-shrink-0 justify-center items-center bg-gray-100 rounded-full w-8 h-8 font-semibold text-black text-sm">1</span>
                   <p class="text-gray-700">{t('beachRules.rules.rule1')}</p>
                 </div>
                 <div class="flex items-start space-x-4">
-                  <span class="flex flex-shrink-0 justify-center items-center bg-orange-100 rounded-full w-8 h-8 font-semibold text-orange-600 text-sm">2</span>
+                  <span class="flex flex-shrink-0 justify-center items-center bg-gray-100 rounded-full w-8 h-8 font-semibold text-black text-sm">2</span>
                   <p class="text-gray-700">{t('beachRules.rules.rule2')}</p>
                 </div>
                 <div class="flex items-start space-x-4">
-                  <span class="flex flex-shrink-0 justify-center items-center bg-orange-100 rounded-full w-8 h-8 font-semibold text-orange-600 text-sm">3</span>
+                  <span class="flex flex-shrink-0 justify-center items-center bg-gray-100 rounded-full w-8 h-8 font-semibold text-black text-sm">3</span>
                   <p class="text-gray-700">{t('beachRules.rules.rule3')}</p>
                 </div>
                 <div class="flex items-start space-x-4">
-                  <span class="flex flex-shrink-0 justify-center items-center bg-orange-100 rounded-full w-8 h-8 font-semibold text-orange-600 text-sm">4</span>
+                  <span class="flex flex-shrink-0 justify-center items-center bg-gray-100 rounded-full w-8 h-8 font-semibold text-black text-sm">4</span>
                   <p class="text-gray-700">{t('beachRules.rules.rule4')}</p>
                 </div>
                 <div class="flex items-start space-x-4">
-                  <span class="flex flex-shrink-0 justify-center items-center bg-orange-100 rounded-full w-8 h-8 font-semibold text-orange-600 text-sm">5</span>
+                  <span class="flex flex-shrink-0 justify-center items-center bg-gray-100 rounded-full w-8 h-8 font-semibold text-black text-sm">5</span>
                   <p class="text-gray-700">{t('beachRules.rules.rule5')}</p>
                 </div>
 
